...
        collectionView.backgroundColor = .clear
        collectionView.alwaysBounceVertical = true
        collectionView.keyboardDismissMode = .interactive
        collectionView.dataSource = self
        collectionView.delegate = self
        collectionView.register(TextMessageCollectionViewCell.self, forCellWithReuseIdentifier: TextMessageCollectionViewCell.reuseIdentifier)
        collectionView.accessibilityIdentifier = "chatRoomV2.collectionView"
        let tapRecognizer = UITapGestureRecognizer(target: self, action: #selector(collectionViewTapped(_:)))
        tapRecognizer.cancelsTouchesInView = false
        collectionView.addGestureRecognizer(tapRecognizer)

        view.addSubview(collectionView)
        NSLayoutConstraint.activate([
...
